# BuddhaGPT

./: .env  .gitignore  README.md  config.py  pyproject.toml
app/: rag_chain.py  server.py
importer/: load_and_process.py
