[tool.poetry]
name = "llmesg"
version = "0.1.0"
description = ""
authors = ["mojoee <47809126+mojoee@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.4"
langchain-cli = "^0.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
